[breaking-changes] Fix alignment of tables, cards and nav at narrow viewports (#2366)
* breadcrumb tidy up

* hover

* renamed classes

* fix card and table alignment at mobile

* fixed menu layout

* fixed conflicts and updated gareths new stuff to be responsive

--- a/kss/scss/home.scss
+++ b/kss/scss/home.scss
@@ -18,7 +18,7 @@
 }
 
 .tile {
-	width: 30%;
+	width: calc(33.33% - 2vw);
 	height: 45vh;
 	min-height: 20rem;
 	max-height: 28rem;
@@ -34,6 +34,17 @@
 	box-shadow: 0 0 1px transparent;
 	transition-duration: 0.3s;
 	&:nth-child(3n-2) {
+		margin-left: 0;
+	}
+	@include xui-breakpoint-medium {
+		width: calc(50% - 2vw);
+		margin-left: 0;
+		&:nth-child(even) {
+			margin-left: 2vw;
+		}
+	}
+	@include xui-breakpoint-narrow {
+		width: 100%;
 		margin-left: 0;
 	}
 }
