--- a/kss/scss/markdown.scss
+++ b/kss/scss/markdown.scss
@@ -30,9 +30,8 @@
 		max-width: calc(33.33% - 20px);
 		min-width: calc(33.33% - 20px);
 	}
-
-	.ds-card-header {
-		margin-bottom: $xui-s-small;
+	.ds-card-content {
+		margin-top: $xui-s-xsmall;
 	}
 }
 
